setup about and sign up pages

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class='right'>
                     <ul>
                         <li><a href="./sign-in.html">SIGN-IN</a></li>
-                        <li><a href="./sign-up.html">SIGN-UP</a></li>
+                        <li><a href="./sign-in.html">SIGN-UP</a></li>
                     </ul>
                 </div>
             </nav>
@@ -37,7 +37,7 @@
                 </div> 
                 
                 <div class='sign-up'>
-                    <button type="button" class="btn "><a href="./sign-up.html">SIGN-UP</a></button> <!--FEATURE FROM BOOTSTRAPS. i CHANGES SOME WITH MY OWN CSS-->
+                    <button type="button" class="btn "><a href="./sign-in.html">SIGN-UP</a></button> <!--FEATURE FROM BOOTSTRAPS. i CHANGES SOME WITH MY OWN CSS-->
                 </div>                
             </div>
 
