--- a/sign-in.html
+++ b/sign-in.html
@@ -6,6 +6,7 @@
       <title>Login and Registration Form in HTML | CodingNepal</title>
       <link rel="stylesheet" href="./resources/css/sign-in.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <script src="resources/JS/Sign-in.Js"></script>
    </head>
    <body>
       <div class="wrapper">
@@ -44,7 +45,7 @@
                      Not a member? <a href="">Signup now</a>
                   </div>
                </form>
-               <form action="#" class="signup">
+               <form action="s#" class="signup">
                   <div class="field">
                      <input type="text" placeholder="Email Address" required>
                   </div>
@@ -62,24 +63,5 @@
             </div>
          </div>
       </div>
-      <script>
-         const loginText = document.querySelector(".title-text .login");
-         const loginForm = document.querySelector("form.login");
-         const loginBtn = document.querySelector("label.login");
-         const signupBtn = document.querySelector("label.signup");
-         const signupLink = document.querySelector("form .signup-link a");
-         signupBtn.onclick = (()=>{
-           loginForm.style.marginLeft = "-50%";
-           loginText.style.marginLeft = "-50%";
-         });
-         loginBtn.onclick = (()=>{
-           loginForm.style.marginLeft = "0%";
-           loginText.style.marginLeft = "0%";
-         });
-         signupLink.onclick = (()=>{
-           signupBtn.click();
-           return false;
-         });
-      </script>
    </body>
 </html>
