Adding mobile views

--- a/about.html
+++ b/about.html
@@ -8,6 +8,32 @@
     <title>About Me</title>
 </head>
 <body>
+
+    <header>
+        <nav class='desk'> <!--For desktop-->
+            <div class='left'>
+                <ul>
+                    <li><a href="./about.html">About</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                </ul>
+            </div>
+            <div class='right'>
+                <ul>
+                    <li><a href="./sign-in.html">SIGN-IN</a></li>
+                    <li><a href="./sign-in.html">SIGN-UP</a></li>
+                </ul>
+            </div>
+        </nav>
+
+        <nav class='mob'> <!--For mobile-->
+            <ul>
+                <li><a href="./about.html"><img src="https://img.icons8.com/material-outlined/24/000000/about.png"></a></li>
+                <li><a href="./contact.html"><img src="https://img.icons8.com/material-outlined/24/000000/contacts.png"></a></li>
+                <li><a href="./sign-in.html"><img src="https://img.icons8.com/material-outlined/24/000000/user--v1.png"></a></li>
+            </ul>               
+        </nav>
+    </header>
+    
     <div class='abtme'>
         <div class='txt'> 
             <img src="resources/images/7-cropped.jpg">          
