--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet" >
         <link href="./resources/css/style.css" rel="stylesheet">
+        <link href="./resources/css/mobile/stylem.css" rel="stylesheet"> <!--For mobile css-->
         <title>My Webpage</title>
     </head>
     <body>
@@ -24,6 +25,14 @@
                     </ul>
                 </div>
             </nav>
+
+            <nav class='mob'> <!--For mobile-->
+                    <ul>
+                        <li><a href="./about.html"><img src="https://img.icons8.com/material-outlined/24/000000/about.png"></a></li>
+                        <li><a href="./contact.html"><img src="https://img.icons8.com/material-outlined/24/000000/contacts.png"></a></li>
+                        <li><a href="./sign-in.html"><img src="https://img.icons8.com/material-outlined/24/000000/user--v1.png"></a></li>
+                    </ul>               
+            </nav>            
         </header>
 
         <div class='maincontent'>
