--- a/sign-in.html
+++ b/sign-in.html
@@ -5,10 +5,37 @@
       <meta charset="utf-8">
       <title>Login and Registration Form in HTML | CodingNepal</title>
       <link rel="stylesheet" href="./resources/css/sign-in.css">
+      <link href="./resources/css/mobile/"
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <script src="resources/JS/Sign-in.Js"></script>
    </head>
    <body>
+
+      <header>
+         <nav class='desk'> <!--For desktop-->
+             <div class='left'>
+                 <ul>
+                     <li><a href="./about.html">About</a></li>
+                     <li><a href="./contact.html">Contact</a></li>
+                 </ul>
+             </div>
+             <div class='right'>
+                 <ul>
+                     <li><a href="./sign-in.html">SIGN-IN</a></li>
+                     <li><a href="./sign-in.html">SIGN-UP</a></li>
+                 </ul>
+             </div>
+         </nav>
+
+         <nav class='mob'> <!--For mobile-->
+            <ul>
+                <li><a href="./about.html"><img src="https://img.icons8.com/material-outlined/24/000000/about.png"></a></li>
+                <li><a href="./contact.html"><img src="https://img.icons8.com/material-outlined/24/000000/contacts.png"></a></li>
+                <li><a href="./sign-in.html"><img src="https://img.icons8.com/material-outlined/24/000000/user--v1.png"></a></li>
+            </ul>               
+         </nav>
+     </header>
+     
       <div class="wrapper">
          <div class="title-text">
             <div class="title login">
