finished mobile view

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             <nav class='mob'> <!--For mobile-->
                     <ul>
-                        <li><a href="./about.html"><img src="https://img.icons8.com/material-outlined/24/000000/about.png"></a></li>
+                        <li><a href="./about.html"><img src="https://img.icons8.com/material-outlined/24/000000/about.png" alt="about"></a></li>
                         <li><a href="./contact.html"><img src="https://img.icons8.com/material-outlined/24/000000/contacts.png"></a></li>
                         <li><a href="./sign-in.html"><img src="https://img.icons8.com/material-outlined/24/000000/user--v1.png"></a></li>
                     </ul>               
@@ -41,6 +41,20 @@
                 <div class='text'>
                     <h1>CODING BLOG FOR CODERS BY CODER</h1>
                     <h2>Coding blog for awesome tips and tricks and ideas</h2>
+                    <p>Watch, Learn, Practice everyday</p>
+                    <p>Sign-up for newsletter today</p>
+                </div> 
+                
+                <div class='sign-up'>
+                    <button type="button" class="btn "><a href="./sign-in.html">SIGN-UP</a></button> <!--FEATURE FROM BOOTSTRAPS. i CHANGES SOME WITH MY OWN CSS-->
+                </div>                
+            </div>
+
+            <div class='section1m'>
+                <img src="./resources/images/banner2 (2).jpg">
+                <div class='text'>
+                    <h2>CODING BLOG FOR CODERS BY CODER</h2>
+                    <h3>Coding blog for awesome <br>tips and tricks and ideas</h3>
                     <p>Watch, Learn, Practice everyday</p>
                     <p>Sign-up for newsletter today</p>
                 </div> 
@@ -67,6 +81,22 @@
                 </div>
             </div>
 
+            <div class='section2m'> 
+                    <div class='feature11'>
+                        <h3>Learn Faster</h3>
+                        <p>Topics to make you learn faster</p>
+                    </div>
+                    <div class='feature11'>
+                        <h3>Practice</h3>
+                        <p>Coding exercises to practice</p>
+                    </div>
+                    <div class='feature11'>
+                        <h3>Projects</h3>
+                        <p>Projects to make you comfortable</p>
+                    </div>
+                
+            </div>
+
             <div class='section3'>
                 <div class='img'>
                     <img src='./resources/images/banner2.jpg'>
@@ -77,6 +107,18 @@
                     <h4>Provided Free Resources</h4>
                     <h4>With Video Guides</h4>                    
                 </div>
+            </div>
+        </div>
+
+        <div class='section3m'>
+            <div class='img'>
+                <img src='./resources/images/Webp.net-resizeimage (2).jpg'>
+            </div>
+
+            <div class='text1'>                    
+                <h4>Completely Free</h4>
+                <h4>Provided Free Resources</h4>
+                <h4>With Video Guides</h4>                    
             </div>
         </div>
     </body>
