finished mobile view

--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./resources/css/about.css" rel="stylesheet">
+    <link href="./resources/css/mobile/aboutm.css" rel = "stylesheet">
     <title>About Me</title>
 </head>
 <body>
@@ -27,6 +28,7 @@
 
         <nav class='mob'> <!--For mobile-->
             <ul>
+                <li><a href="./index.html"><img src="https://img.icons8.com/material-outlined/24/000000/home--v2.png"/></a></li>
                 <li><a href="./about.html"><img src="https://img.icons8.com/material-outlined/24/000000/about.png"></a></li>
                 <li><a href="./contact.html"><img src="https://img.icons8.com/material-outlined/24/000000/contacts.png"></a></li>
                 <li><a href="./sign-in.html"><img src="https://img.icons8.com/material-outlined/24/000000/user--v1.png"></a></li>
@@ -38,7 +40,13 @@
         <div class='txt'> 
             <img src="resources/images/7-cropped.jpg">          
             <h1>About me </h1>
-            <p>A 22 year old college student,Enthusiastic in coding. <br>Interested in Software developing,Android development, web development and data science. <br>Ilike to learn and my dream is to become a great developer anddevelop many great things. <br>My hobbies are streaming andgaming. Thanks </p>
+            <p>A 22 year old college student,Enthusiastic in coding. <br>Interested in Software developing,Android development, web development and data science. <br>I like to learn and my dream is to become a great developer and develop many great things. <br>My hobbies are streaming andgaming. Thanks </p>
+        </div>
+
+        <div class='txtm'> 
+            <img src="./resources/images/7-croppedm.jpg">          
+            <h1>About me </h1>
+            <p>A 22 year old college student,Enthusiastic in coding. <br>Interested in Software developing,Android development, <br>web development and data science. <br>I like to learn and my dream is to become a great developer <br>and develop many great things. <br>My hobbies are streaming andgaming. Thanks </p>
         </div>
     </div>
 </body>
