--- a/sign-in.html
+++ b/sign-in.html
@@ -29,6 +29,7 @@
 
          <nav class='mob'> <!--For mobile-->
             <ul>
+               <li><a href="./index.html"><img src="https://img.icons8.com/material-outlined/24/000000/home--v2.png"/></a></li>
                 <li><a href="./about.html"><img src="https://img.icons8.com/material-outlined/24/000000/about.png"></a></li>
                 <li><a href="./contact.html"><img src="https://img.icons8.com/material-outlined/24/000000/contacts.png"></a></li>
                 <li><a href="./sign-in.html"><img src="https://img.icons8.com/material-outlined/24/000000/user--v1.png"></a></li>
